Upgrade to Spring-boot 3.2
httpclient4 is still held back

Closes #244